--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,17 @@
   <h1>Welcome to {{title}}!</h1>
   <h1>{{ title }}</h1>
   <h2>My favorite hero is: {{ myHero.name }}</h2>
-  <p>Heros:</p>
+  <p>Heros: {{ }}</p>
   <ul>
-    <li *ngFor="let hero of heroes" >
+    <li *ngFor="let hero of heroes" [ngClass]="itemClass" (click)="clickItem=$event">
       {{ hero.name }}
       <button (click)="deleteHero(hero)">X</button>
     </li>
   </ul>
+  <table border="1">
+    <tr><td [attr.colspan]="1 + 1">1 - 2</td></tr>
+    <tr><td>Five</td><td>Six</td></tr>
+  </table>
+  <img [src]="imgSrc" (click)="onClick()">
   <p *ngIf="heroes.length > 3">There are many heroes!</p>
 </div>
