--- a/src/app/chat-room/chat-room.component.html
+++ b/src/app/chat-room/chat-room.component.html
@@ -1,3 +1,12 @@
-<p>
-  chat-room works!
-</p>
+<main class="main-content">
+  <section class="user-list-wrapper">
+    <app-user-list></app-user-list>
+  </section>
+  <section #scroller class="feed-back-wrapper">
+    <app-feed-back></app-feed-back>
+  </section>
+</main>
+
+<section class="chat-form-wrapper">
+  <app-chat-form></app-chat-form>
+</section>
