--- a/src/app/chat-room/chat-room.component.html
+++ b/src/app/chat-room/chat-room.component.html
@@ -3,7 +3,7 @@
     <app-user-list></app-user-list>
   </section>
   <section #scroller class="feed-back-wrapper">
-    <app-feed-back></app-feed-back>
+    <app-feedback></app-feedback>
   </section>
 </main>
 
