--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -1,3 +1,5 @@
-<p>
-  feedback works!
-</p>
+<section class="feed-back">
+  <div *ngFor="let message of feedbacks | async" class="message">
+    <app-message [chatMessage]=message></app-message>
+  </div>
+</section>
