--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -1,3 +1,6 @@
-<p>
-  message works!
-</p>
+<div class="message-container">
+  <p>{{ userName }}</p>
+  <p>{{ userEmail }}</p>
+  <p>{{ timeSent }}</p>
+  <p>{{ messageContent }}</p>
+</div>
