--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -1,6 +1,7 @@
 <div class="message-container">
-  <p>{{ userName }}</p>
-  <p>{{ userEmail }}</p>
-  <p>{{ timeSent }}</p>
+  <div class="message-content">
+    <span class="sender">{{ userName }}</span>
+    <span class="time-stamp">{{ timeSent }}</span>
+  </div>
   <p>{{ messageContent }}</p>
 </div>
