--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -1,7 +1,7 @@
 <div class="message-container">
-  <div class="message-content">
+  <div class="message-info">
     <span class="sender">{{ userName }}</span>
     <span class="time-stamp">{{ timeSent }}</span>
   </div>
-  <p>{{ messageContent }}</p>
+  <p class="message-content">{{ messageContent }}</p>
 </div>
