--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="signup-card">
     <h2 class="heading">Sign Up</h2>
-    <from #signUpForm="ngForm">
+    <form #signUpForm="ngForm">
       <label for="email" class="label">
         Email
         <input type="email" id="email" name="email" placeholder="Enter you email"
@@ -15,12 +15,16 @@
       </label>
 
       <label for="displayName" class="label">
+        Display Name
         <input type="text" id="displayName" name="displayName" placeholder="Enter you displayName"
           [(ngModel)]="displayName" class="form-input" required>
       </label>
+
       <p class="error" *ngIf="error">{{ error.message }}</p>
-      <button type="submit" [disabled]="!signUpForm.form.valid"
-        (click)="userSignUp()" class="btn" id="btn-signUp">Sign Up</button>
-    </from>
+
+      <button type="submit" [disabled]="!signUpForm.form.valid" class="btn" 
+        id="btn-signUp" type="submit" (click)="userSignUp()">Sign Up</button>
+
+    </form>
   </div>
 </div>
