--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -1,6 +1,6 @@
 <div class="message-container">
   <div class="message-info">
-    <span class="sender">{{ userName }}</span>
+    <span class="sender">{{ userEmail }}</span>
     <span class="time-stamp">{{ timeSent }}</span>
   </div>
   <p class="message-content">{{ messageContent }}</p>
